# arrow-to-json

./: .prettierignore  Cargo.toml  README.md  arrow-to-json.wasi-browser.js  arrow-to-json.wasi.cjs  browser.js  index.d.ts  index.js  package.json
.github/: renovate.json
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts
src/: lib.rs
