[package]
edition = "2021"
name    = "arrow-to-json"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "3.0.0", features = ["serde-json"] }
napi-derive = "3.0.0"
arrow-array  = "54"
arrow-cast   = "54"
arrow-ipc    = "54"
arrow-schema = "54"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
itoa         = "1"
ryu          = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto   = true
strip = "symbols"
